<resources>
    <string name="app_name">My Places</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s get started</string>
    <string name="intro_text_description">Start discovering some amazing places near your current location</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Please enter your name, email and password to sign up.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Please enter your email and password to sign in.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>

    <string name="add_location_title">Add location</string>
    <string name="create">CREATE</string>
    <string name="location_name">Location</string>
    <string name="location_description">Description</string>
    <string name="location_hint_date">Date</string>
    <string name="location_detail_date_msg">Visited on: %1$s</string>
    <string name="no_locations_are_available">No locations are available!</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>

    <string name="google_maps_api_key">AIzaSyBP3PdKOkuTtqW2WWXRsadi1A0o4_i0CbQ</string>

</resources>