<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddLocationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_location_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/yellow"
            app:popupTheme="@style/Theme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/intro_background"
        android:orientation="vertical"
        android:padding="@dimen/create_location_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_view_elevation"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_location_image"
                    android:layout_width="@dimen/board_image_size"
                    android:layout_height="@dimen/board_image_size"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_location_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/yellow"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="@dimen/create_location_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_location_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_name"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/yellow"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="@dimen/create_location_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_location_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_description"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/yellow"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    android:layout_marginTop="@dimen/create_location_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_location_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_hint_date"
                        android:textColor="@color/black"
                        android:inputType="text"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textSize="@dimen/et_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/create_location_btn_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    app:backgroundTint="@null"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/create"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>